@@ -70,6 +70,10 @@ struct ofputil_bucket *ofputil_bucket_find(const struct ovs_list *,
 bool ofputil_bucket_check_duplicate_id(const struct ovs_list *);
 struct ofputil_bucket *ofputil_bucket_list_front(const struct ovs_list *);
 struct ofputil_bucket *ofputil_bucket_list_back(const struct ovs_list *);
+void ofputil_bucket_format(struct ds *, const struct ofputil_bucket *,
+                           enum ofp11_group_type, enum ofp_version,
+                           const struct ofputil_port_map *,
+                           const struct ofputil_table_map *);
 
 static inline bool
 ofputil_bucket_has_liveness(const struct ofputil_bucket *bucket)
@@ -88,6 +92,8 @@ struct ofputil_group_props {
 void ofputil_group_properties_destroy(struct ofputil_group_props *);
 void ofputil_group_properties_copy(struct ofputil_group_props *to,
                                    const struct ofputil_group_props *from);
+void ofputil_group_properties_format(const struct ofputil_group_props *,
+                                     struct ds *);
 /* Protocol-independent group_mod. */
 struct ofputil_group_mod {
     uint16_t command;             /* One of OFPGC15_*. */
@@ -199,6 +205,14 @@ enum ofperr ofputil_group_desc_format(struct ds *, const struct ofp_header *,
 enum ofperr ofputil_group_features_format(struct ds *,
                                           const struct ofp_header *);
 
+/* Group formatting. */
+void ofputil_group_format(struct ds *s, uint32_t group_id, uint8_t type,
+                          const struct ofputil_bucket *,
+                          const struct ovs_list *p_buckets,
+                          const struct ofputil_group_props *,
+                          enum ofp_version, bool suppress_type,
+                          const struct ofputil_port_map *,
+                          const struct ofputil_table_map *);
 #ifdef __cplusplus
 }
 #endif
